--- a/elastic_constants/get irreducible elastic constants from LabView.ipynb
+++ b/elastic_constants/get irreducible elastic constants from LabView.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,15 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array(['1248_no_outliers_cooling.dat', '1330_no_outliers_cooling.dat',\n",
-       "       '1365_no_outliers_cooling.dat', '1376_no_outliers_cooling.dat',\n",
+       "array(['1248_no_outliers_cooling_old.dat',\n",
+       "       '1250_no_outliers_cooling_new.dat', '1330_no_outliers_cooling.dat',\n",
+       "       '1342_no_outliers_cooling_clean_new.dat',\n",
+       "       '1342_no_outliers_cooling_old.dat', '1376_no_outliers_cooling.dat',\n",
        "       '1435_no_outliers_cooling.dat',\n",
        "       '1580_no_outliers_cooling_clean.dat',\n",
        "       '1596_no_outliers_cooling_clean.dat',\n",
@@ -60,11 +62,14 @@
        "       '2184_no_outliers_cooling_clean.dat',\n",
        "       '2290_no_outliers_cooling_clean.dat',\n",
        "       '2355_no_outliers_cooling_clean.dat',\n",
-       "       '2768_no_outliers_cooling_clean.dat'], dtype='<U34')"
+       "       '2729_no_outliers_cooling_clean.dat',\n",
+       "       '2763_no_outliers_cooling_clean.dat',\n",
+       "       '2769_no_outliers_cooling.dat', '2847_no_outliers_cooling.dat',\n",
+       "       '2903_no_outliers_cooling.dat'], dtype='<U38')"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 64
     }
    ],
    "source": [
@@ -94,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-3-078623a47ef5>:14: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  Traw = np.array(Traw) # temperature in K\n<ipython-input-3-078623a47ef5>:15: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  fraw = np.array(fraw) # frequencies in kHz\n<ipython-input-3-078623a47ef5>:16: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  gammaraw = np.array(gammaraw) # resonance widths in kHz\n"
+      "<ipython-input-65-078623a47ef5>:14: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  Traw = np.array(Traw) # temperature in K\n<ipython-input-65-078623a47ef5>:15: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  fraw = np.array(fraw) # frequencies in kHz\n<ipython-input-65-078623a47ef5>:16: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  gammaraw = np.array(gammaraw) # resonance widths in kHz\n"
      ]
     }
    ],
@@ -126,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-5-e1aaf49743a8>:9: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  mask = np.array([(i > Tmin) & (i < Tmax) for i in Traw])\n"
+      "<ipython-input-67-e1aaf49743a8>:9: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  mask = np.array([(i > Tmin) & (i < Tmax) for i in Traw])\n"
      ]
     }
    ],
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 815,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-62-48cd4237fb2d>:3: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  mask = np.array([(i > Tmin) & (i < Tmax) for i in Traw])\n"
+     ]
+    }
+   ],
    "source": [
     "Tmin = 1.29\n",
     "Tmax = 1.65\n",
@@ -333,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -342,7 +355,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "the maximum temperature range is 398.7234 to 461.4407 K\n"
+      "the maximum temperature range is 398.7234 to 461.4407 K\n",
+      "<ipython-input-35-e595f2eba6b3>:25: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  mask_raw = np.array([(i >= Tmin_int) & (i <= Tmax_int) for i in Traw])\n",
+      "<ipython-input-35-e595f2eba6b3>:26: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  Traw = np.array([Traw[i][mask_raw[i]] for i in np.arange(len(Traw))])\n",
+      "<ipython-input-35-e595f2eba6b3>:27: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  fraw = np.array([fraw[i][mask_raw[i]] for i in np.arange(len(Traw))])\n",
+      "<ipython-input-35-e595f2eba6b3>:28: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  dfraw = np.array([(i-i[-1]) for i in fraw])\n",
+      "<ipython-input-35-e595f2eba6b3>:29: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  dfofraw = np.array([(i-i[-1])/i[-1] for i in fraw])\n"
      ]
     }
    ],
@@ -390,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,21 +451,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false,
     "tags": []
    },
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-38-be8088e8092e>:18: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  mask_raw = np.array([(i >= Tmin) & (i <= Tmax) for i in Traw])\n"
+     ]
+    },
+    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26705dc7278>"
+       "<matplotlib.legend.Legend at 0x1d679a88790>"
       ]
      },
      "metadata": {},
-     "execution_count": 766
+     "execution_count": 38
     }
    ],
    "source": [
@@ -502,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -562,9 +592,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-40-b8c29e87d600>:57: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  data = np.array(data)\n"
+     ]
+    }
+   ],
    "source": [
     "folder = \"C:\\\\Users\\\\j111\\\\Box Sync\\\\Projects\"\n",
     "folder = \"C:\\\\Users\\\\Florian\\\\Box Sync\\\\Projects\"\n",
@@ -629,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -673,7 +711,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1248.8 1307.1 1343.3 1376.8 1435.7 1580.  1595.1 1603.4 1713.9 1780.1\n 1814.8 1888.4 1917.4 2022.4 2046.8 2184.8]\n"
+      "[1248.8 1307.1 1343.3 1376.8 1435.7 1580.  1595.1 1603.4 1713.9 1780.1\n 1814.8 1888.4 1917.4 2022.4 2046.8 2184.8 2289.9 2339.3 2728.8 2762.3\n 2767.3 2846.6 2903.2]\n"
      ]
     }
    ],
@@ -685,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -704,14 +742,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "#n = [1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 18]\n",
     "# n = [1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 36, 40, 41, 42] #Mn3Ge\n",
     "# n = [1, 2, 4, 5, 7, 8, 9, 11, 14, 15, 20, 22, 29, 30, 33, 34] #Mn3.019Sn0.981 2007 A\n",
-    "n = [1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 15, 16, 17, 18, 20, 22] # Mn3.1Sn0.89\n",
+    "n = [1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 15, 16, 17, 18, 20, 22, 27, 29, 39, 40, 41, 42, 43] # Mn3.1Sn0.89\n",
+    "\n",
     "\n",
     "fht = fht_exp[n]\n",
     "#fht = fht_calc[n] # this is not what I usually want!!!!!!!!!! usually it is fht_exp\n",
@@ -721,7 +760,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "len(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -731,11 +790,13 @@
        "array([1248.82730537, 1307.05863665, 1343.28270215, 1376.82258347,\n",
        "       1435.73385311, 1580.00129   , 1595.08077018, 1603.40382086,\n",
        "       1713.91956135, 1780.06751865, 1814.76322428, 1888.41202269,\n",
-       "       1917.44198995, 2022.35783894, 2046.84550687, 2184.84076077])"
+       "       1917.44198995, 2022.35783894, 2046.84550687, 2184.84076077,\n",
+       "       2289.85722246, 2339.25719716, 2728.76994687, 2762.33330527,\n",
+       "       2767.27417914, 2846.56414183, 2903.17462285])"
       ]
      },
      "metadata": {},
-     "execution_count": 789
+     "execution_count": 48
     }
    ],
    "source": [
@@ -744,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -753,11 +814,12 @@
       "text/plain": [
        "array([1.2494702, 1.3085496, 1.3448628, 1.3785346, 1.4386723, 1.5792428,\n",
        "       1.596015 , 1.6042103, 1.7158412, 1.7765009, 1.8214796, 1.8907523,\n",
-       "       1.9241073, 2.0238838, 2.048357 , 2.1882558])"
+       "       1.9241073, 2.0238838, 2.048357 , 2.1882558, 2.2926929, 2.3421912,\n",
+       "       2.6912749, 2.7309978, 2.7632811, 2.7685013, 2.8488386])"
       ]
      },
      "metadata": {},
-     "execution_count": 790
+     "execution_count": 49
     }
    ],
    "source": [
@@ -773,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 791,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -802,7 +864,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 793,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "77.04697695249729\n146.36646177457837\n31.365285135871872\n177.21732573112217\n45.681691816625424\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in Cirrep:\n",
+    "    print (c[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +893,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 793
+     "execution_count": 53
     }
    ],
    "source": [
@@ -822,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 794,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 795,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
