--- a/elastic_constants/clean raw frequency data.ipynb
+++ b/elastic_constants/clean raw frequency data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['2768_no_outliers_cooling.dat']"
+       "['1313_no_outliers_cooling.dat',\n",
+       " '1313_no_outliers_cooling_clean.dat',\n",
+       " '1385_no_outliers_cooling.dat']"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 91
     }
    ],
    "source": [
@@ -59,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
+    "i = 2\n",
     "filename = filenames[i]\n",
     "data = data_extract(filename)\n",
     "T = data.import_data(1,3)[0]\n",
@@ -140,23 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x256acb71490>"
+       "<matplotlib.collections.PathCollection at 0x21ac63da8b0>"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 93
     }
    ],
    "source": [
     "plt.figure(figsize=(12,8))\n",
     "plt.scatter(T, f, s=13)\n",
+    "# plt.plot(T, f)\n",
     "# plt.scatter(T1, f1, s=13)\n",
     "# plt.scatter(T2, f2, s=13)\n",
     "# plt.scatter(T3, f3, s=13)\n",
@@ -500,18 +503,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x256a9bc6190>"
+       "<matplotlib.collections.PathCollection at 0x21ac634ceb0>"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 60
     }
    ],
    "source": [
@@ -555,18 +558,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x16811fb4940>"
+       "<matplotlib.collections.PathCollection at 0x21ac9cd6fd0>"
       ]
      },
      "metadata": {},
-     "execution_count": 318
+     "execution_count": 76
     }
    ],
    "source": [
@@ -576,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 86,
    "metadata": {
     "tags": []
    },
@@ -585,22 +588,22 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "25.0 1.0\n"
+      "24.0 300.0\n"
      ]
     }
    ],
    "source": [
     "Tcl1 = 1.2\n",
     "Tcl2 = 3\n",
-    "Tcl1 = 428.4\n",
-    "Tcl2 = 428.7\n",
+    "Tcl1 = 417\n",
+    "Tcl2 = 427\n",
     "clean_mask = (T>Tcl1) & (T<Tcl2)\n",
     "\n",
     "fclean = f[clean_mask]\n",
     "Tclean = T[clean_mask]\n",
     "gclean = g[clean_mask]\n",
     "data_clean = odr.RealData(Tclean, fclean)\n",
-    "initial_guess_clean = [0,0,0,0,0,0]\n",
+    "initial_guess_clean = [0,0,0,0]\n",
     "fix_clean = [1,1,1,1,1]\n",
     "model_clean = odr.Model(fct)\n",
     "fit_clean = odr.ODR(data_clean, model_clean, beta0=initial_guess_clean)#, ifixb=fix_clean)\n",
@@ -608,7 +611,7 @@
     "popt_clean = out_clean.beta\n",
     "\n",
     "\n",
-    "epsilon = .5\n",
+    "epsilon = .35\n",
     "index = abs(fclean - fct(popt_clean, Tclean)) < epsilon\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
@@ -622,18 +625,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1687b657630>"
+       "<matplotlib.collections.PathCollection at 0x21ac61a08b0>"
       ]
      },
      "metadata": {},
-     "execution_count": 299
+     "execution_count": 87
     }
    ],
    "source": [
@@ -645,15 +648,15 @@
     "Tnew = np.sort(Tnew)\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
-    "plt.scatter(Tnew, fnew, s=1, c='tab:blue')\n",
+    "plt.scatter(Tnew, fnew, s=5, c='tab:blue')\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
-    "plt.scatter(Tnew, gnew, s=0.1, c='tab:blue')"
+    "plt.scatter(Tnew, gnew, s=5, c='tab:blue')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,6 +763,13 @@
     "    for i in np.arange(len(f)-1):\n",
     "        clean.write(str(T[i]) + '\\t' + str(f[i]) + '\\t' + str(g[i]) + '\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
