--- a/elastic_constants/clean raw frequency data.ipynb
+++ b/elastic_constants/clean raw frequency data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import os\n",
     "from scipy.interpolate import interp1d\n",
     "from scipy.signal import butter,filtfilt\n",
-    "from scipy.optimize import curve_fit\n",
+    "from scipy.optimize import  curve_fit\n",
     "from scipy import interpolate\n",
     "from scipy import odr\n",
     "\n",
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['1313_no_outliers_cooling.dat',\n",
-       " '1313_no_outliers_cooling_clean.dat',\n",
-       " '1385_no_outliers_cooling.dat']"
+       "['1310_no_outliers_cooling.dat',\n",
+       " '1313_no_outliers_cooling.dat',\n",
+       " '1313_no_outliers_cooling_clean.dat']"
       ]
      },
      "metadata": {},
-     "execution_count": 91
+     "execution_count": 10
     }
    ],
    "source": [
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 2\n",
+    "i = 0\n",
     "filename = filenames[i]\n",
     "data = data_extract(filename)\n",
     "T = data.import_data(1,3)[0]\n",
@@ -142,18 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21ac63da8b0>"
+       "<matplotlib.collections.PathCollection at 0x1623b7590d0>"
       ]
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 12
     }
    ],
    "source": [
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2002 2002\n"
+      "2257 2257\n"
      ]
     }
    ],
@@ -409,21 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(13,8))\n",
-    "Tmin = 415\n",
-    "Tmax = 426\n",
+    "Tmin = 418\n",
+    "Tmax = 425\n",
     "\n",
     "mask = (T > Tmin) & (T < Tmax)\n",
     "plt.scatter(T[mask],f[mask])\n",
     "\n",
-    "T1 = 419\n",
+    "T1 = 418\n",
     "T2 = 420\n",
-    "T3 = 422.5\n",
-    "T4 = 423.5\n",
+    "T3 = 424\n",
+    "T4 = 425\n",
     "\n",
     "mask1 = ((T>T1) & (T<T2))\n",
     "mask2 = ((T>T3) & (T<T4))\n",
@@ -431,7 +431,7 @@
     "plt.plot( T[mask1], f[mask1], c='red')\n",
     "plt.plot( T[mask2], f[mask2], c='green')\n",
     "\n",
-    "Tc = 421.8\n",
+    "Tc = 423.15\n",
     "\n",
     "#plt.plot([Tc, Tc], [np.mean(f)-1, np.mean(f)+1], c='orange')\n",
     "plt.plot([Tc, Tc], [min(f[(T>Tmin)&(T<Tmax)]), max(f[(T>Tmin)&(T<Tmax)])], c='orange')\n",
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,18 +476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1685c8aae80>]"
+       "[<matplotlib.lines.Line2D at 0x1623ac891f0>]"
       ]
      },
      "metadata": {},
-     "execution_count": 240
+     "execution_count": 19
     }
    ],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -588,15 +588,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "24.0 300.0\n"
+      "20.0 395.0\n"
      ]
     }
    ],
    "source": [
     "Tcl1 = 1.2\n",
     "Tcl2 = 3\n",
-    "Tcl1 = 417\n",
-    "Tcl2 = 427\n",
+    "Tcl1 = 415\n",
+    "Tcl2 = 426\n",
     "clean_mask = (T>Tcl1) & (T<Tcl2)\n",
     "\n",
     "fclean = f[clean_mask]\n",
@@ -611,7 +611,7 @@
     "popt_clean = out_clean.beta\n",
     "\n",
     "\n",
-    "epsilon = .35\n",
+    "epsilon = .019\n",
     "index = abs(fclean - fct(popt_clean, Tclean)) < epsilon\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
@@ -619,24 +619,24 @@
     "plt.plot(T, f)\n",
     "plt.plot(Tclean[index], fclean[index])\n",
     "plt.xlim(Tcl1, Tcl2)\n",
-    "# plt.ylim(920+2.662e6, 930+2.662e6)\n",
+    "plt.ylim(min(fclean[index]), max(fclean[index]))\n",
     "print ( len(index) - sum(np.ones(len(index))[index]),  sum(np.ones(len(index))[index]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21ac61a08b0>"
+       "<matplotlib.collections.PathCollection at 0x1623b230160>"
       ]
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 21
     }
    ],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
