--- a/elastic_constants/clean raw frequency data.ipynb
+++ b/elastic_constants/clean raw frequency data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,20 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['1310_no_outliers_cooling.dat',\n",
-       " '1313_no_outliers_cooling.dat',\n",
-       " '1313_no_outliers_cooling_clean.dat']"
+       "['1776_no_outliers_cooling.dat', '1923_no_outliers_cooling.dat']"
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 2
     }
    ],
    "source": [
@@ -61,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
+    "i = 1\n",
     "filename = filenames[i]\n",
     "data = data_extract(filename)\n",
     "T = data.import_data(1,3)[0]\n",
@@ -142,18 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1623b7590d0>"
+       "<matplotlib.collections.PathCollection at 0x27d7a7d0310>"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 22
     }
    ],
    "source": [
@@ -409,21 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(13,8))\n",
-    "Tmin = 418\n",
+    "Tmin = 420\n",
     "Tmax = 425\n",
     "\n",
     "mask = (T > Tmin) & (T < Tmax)\n",
     "plt.scatter(T[mask],f[mask])\n",
     "\n",
-    "T1 = 418\n",
-    "T2 = 420\n",
-    "T3 = 424\n",
-    "T4 = 425\n",
+    "T1 = 422\n",
+    "T2 = 422.5\n",
+    "T3 = 423.4\n",
+    "T4 = 424\n",
     "\n",
     "mask1 = ((T>T1) & (T<T2))\n",
     "mask2 = ((T>T3) & (T<T4))\n",
@@ -431,7 +429,7 @@
     "plt.plot( T[mask1], f[mask1], c='red')\n",
     "plt.plot( T[mask2], f[mask2], c='green')\n",
     "\n",
-    "Tc = 423.15\n",
+    "Tc = 423\n",
     "\n",
     "#plt.plot([Tc, Tc], [np.mean(f)-1, np.mean(f)+1], c='orange')\n",
     "plt.plot([Tc, Tc], [min(f[(T>Tmin)&(T<Tmax)]), max(f[(T>Tmin)&(T<Tmax)])], c='orange')\n",
@@ -441,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,18 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1623ac891f0>]"
+       "[<matplotlib.lines.Line2D at 0x27d7a9c7ca0>]"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 26
     }
    ],
    "source": [
@@ -579,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -588,22 +586,22 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "20.0 395.0\n"
+      "7.0 109.0\n"
      ]
     }
    ],
    "source": [
     "Tcl1 = 1.2\n",
     "Tcl2 = 3\n",
-    "Tcl1 = 415\n",
-    "Tcl2 = 426\n",
+    "Tcl1 = 422\n",
+    "Tcl2 = 424\n",
     "clean_mask = (T>Tcl1) & (T<Tcl2)\n",
     "\n",
     "fclean = f[clean_mask]\n",
     "Tclean = T[clean_mask]\n",
     "gclean = g[clean_mask]\n",
     "data_clean = odr.RealData(Tclean, fclean)\n",
-    "initial_guess_clean = [0,0,0,0]\n",
+    "initial_guess_clean = [0,0,0,0,0]\n",
     "fix_clean = [1,1,1,1,1]\n",
     "model_clean = odr.Model(fct)\n",
     "fit_clean = odr.ODR(data_clean, model_clean, beta0=initial_guess_clean)#, ifixb=fix_clean)\n",
@@ -611,7 +609,7 @@
     "popt_clean = out_clean.beta\n",
     "\n",
     "\n",
-    "epsilon = .019\n",
+    "epsilon = .05\n",
     "index = abs(fclean - fct(popt_clean, Tclean)) < epsilon\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
@@ -625,18 +623,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1623b230160>"
+       "<matplotlib.collections.PathCollection at 0x27d7a90abe0>"
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 30
     }
    ],
    "source": [
@@ -656,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
