add code to visualize erros in elastic constants

--- a/elastic_constants/get irreducible elastic constants from LabView.ipynb
+++ b/elastic_constants/get irreducible elastic constants from LabView.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 980,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 981,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,19 +54,18 @@
        "       '1603_no_outliers_cooling_clean.dat',\n",
        "       '1701_no_outliers_cooling_clean.dat',\n",
        "       '1829_no_outliers_cooling_clean.dat',\n",
-       "       '1917_no_outliers_cooling_clean.dat',\n",
        "       '2022_no_outliers_cooling_clean.dat',\n",
-       "       '2184_no_outliers_cooling_clean.dat',\n",
        "       '2290_no_outliers_cooling_clean.dat',\n",
        "       '2355_no_outliers_cooling_clean.dat',\n",
+       "       '2691_no_outliers_cooling.dat',\n",
        "       '2729_no_outliers_cooling_clean.dat',\n",
        "       '2763_no_outliers_cooling_clean.dat',\n",
-       "       '2847_no_outliers_cooling.dat', '2903_no_outliers_cooling.dat'],\n",
-       "      dtype='<U38')"
+       "       '2847_no_outliers_cooling.dat', '2903_no_outliers_cooling.dat',\n",
+       "       '2964_no_outliers_cooling.dat'], dtype='<U38')"
       ]
      },
      "metadata": {},
-     "execution_count": 981
+     "execution_count": 2
     }
    ],
    "source": [
@@ -96,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 982,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-982-078623a47ef5>:14: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  Traw = np.array(Traw) # temperature in K\n<ipython-input-982-078623a47ef5>:15: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  fraw = np.array(fraw) # frequencies in kHz\n<ipython-input-982-078623a47ef5>:16: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  gammaraw = np.array(gammaraw) # resonance widths in kHz\n"
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:14: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  \nC:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:15: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  from ipykernel import kernelapp as app\nC:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:16: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  app.launch_new_instance()\n"
      ]
     }
    ],
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 983,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 984,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-984-e1aaf49743a8>:9: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  mask = np.array([(i > Tmin) & (i < Tmax) for i in Traw])\n"
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:9: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  if __name__ == '__main__':\n"
      ]
     }
    ],
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 988,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -352,17 +351,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "the maximum temperature range is 398.7234 to 461.4407 K\n",
-      "<ipython-input-988-e595f2eba6b3>:25: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  mask_raw = np.array([(i >= Tmin_int) & (i <= Tmax_int) for i in Traw])\n",
-      "<ipython-input-988-e595f2eba6b3>:26: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  Traw = np.array([Traw[i][mask_raw[i]] for i in np.arange(len(Traw))])\n",
-      "<ipython-input-988-e595f2eba6b3>:27: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  fraw = np.array([fraw[i][mask_raw[i]] for i in np.arange(len(Traw))])\n",
-      "<ipython-input-988-e595f2eba6b3>:28: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  dfraw = np.array([(i-i[-1]) for i in fraw])\n",
-      "<ipython-input-988-e595f2eba6b3>:29: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  dfofraw = np.array([(i-i[-1])/i[-1] for i in fraw])\n"
+      "the maximum temperature range is 399.5818 to 461.4407 K\n",
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:25: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:26: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:27: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:28: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:29: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n"
      ]
     }
    ],
@@ -410,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 989,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 990,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 991,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -458,18 +452,18 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-991-be8088e8092e>:18: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  mask_raw = np.array([(i >= Tmin) & (i <= Tmax) for i in Traw])\n"
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:18: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2ac83583fd0>"
+       "<matplotlib.legend.Legend at 0x19d083fe1d0>"
       ]
      },
      "metadata": {},
-     "execution_count": 991
+     "execution_count": 9
     }
    ],
    "source": [
@@ -529,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 992,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -589,14 +583,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 993,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-993-b8c29e87d600>:57: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n  data = np.array(data)\n"
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:57: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n"
      ]
     }
    ],
@@ -664,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 994,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 995,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -708,7 +702,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1249.2 1306.7 1342.6 1376.4 1436.6 1580.  1595.1 1603.4 1713.9 1814.8\n 1917.4 2022.4 2184.8 2289.9 2339.3 2728.8 2762.3 2846.6 2903.2]\n"
+      "[1249.2 1306.7 1342.6 1376.4 1436.6 1580.  1595.1 1603.4 1713.9 1814.8\n 2022.4 2289.9 2339.3 2691.1 2728.8 2762.3 2846.6 2903.2 2957.9]\n"
      ]
     }
    ],
@@ -720,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 996,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -739,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 997,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +741,7 @@
     "# n = [1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 36, 40, 41, 42] #Mn3Ge\n",
     "# n = [1, 2, 4, 5, 7, 8, 9, 11, 14, 15, 20, 22, 29, 30, 33, 34] #Mn3.019Sn0.981 2007 A\n",
     "n = [1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 15, 16, 17, 18, 20, 22, 27, 29, 39, 40, 41, 42, 43] # Mn3.1Sn0.89\n",
-    "n = [1, 2, 3, 4, 5, 6, 7, 8, 9, 15, 17, 18, 22, 27, 29, 39, 40, 42, 43] # Mn3.1Sn0.89\n",
+    "n = [1, 2, 3, 4, 5, 6, 7, 8, 9, 15, 18, 27, 29, 38, 39, 40, 42, 43, 44] # Mn3.1Sn0.89\n",
     "\n",
     "\n",
     "fht = fht_exp[n]\n",
@@ -758,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 998,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +763,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 998
+     "execution_count": 16
     }
    ],
    "source": [
@@ -778,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 999,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -787,13 +781,13 @@
       "text/plain": [
        "array([1249.19237733, 1306.66869927, 1342.60217647, 1376.41085013,\n",
        "       1436.55974526, 1580.00129   , 1595.08077018, 1603.40382086,\n",
-       "       1713.91956135, 1814.76322428, 1917.44198995, 2022.35783894,\n",
-       "       2184.84076077, 2289.85722246, 2339.25719716, 2728.76994687,\n",
-       "       2762.33330527, 2846.56414183, 2903.17462285])"
+       "       1713.91956135, 1814.76322428, 2022.35783894, 2289.85722246,\n",
+       "       2339.25719716, 2691.09640137, 2728.76994687, 2762.33330527,\n",
+       "       2846.56414183, 2903.17462285, 2957.87618262])"
       ]
      },
      "metadata": {},
-     "execution_count": 999
+     "execution_count": 17
     }
    ],
    "source": [
@@ -802,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1000,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -810,13 +804,13 @@
      "data": {
       "text/plain": [
        "array([1.249135 , 1.3070716, 1.3431158, 1.3766053, 1.4369951, 1.5797967,\n",
-       "       1.5961816, 1.6043069, 1.7146944, 1.8205531, 1.9247833, 2.0252633,\n",
-       "       2.1892817, 2.29022  , 2.3396525, 2.7287233, 2.7623594, 2.846981 ,\n",
-       "       2.9051335])"
+       "       1.5961816, 1.6043069, 1.7146944, 1.8205531, 2.0252633, 2.29022  ,\n",
+       "       2.3396525, 2.6911247, 2.7287233, 2.7623594, 2.846981 , 2.9051335,\n",
+       "       2.9577782])"
       ]
      },
      "metadata": {},
-     "execution_count": 1000
+     "execution_count": 18
     }
    ],
    "source": [
@@ -832,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1001,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1016,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -861,14 +855,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1017,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "73.4178216567756\n143.1491091971449\n14.800919038838533\n44.03181060741422\n45.84967621851782\n"
+      "73.81976193111218\n142.73665812862146\n14.16174662051939\n44.04897363576542\n45.83884717634788\n"
      ]
     }
    ],
@@ -879,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1018,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +884,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1018
+     "execution_count": 22
     }
    ],
    "source": [
@@ -899,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1019,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1020,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1021,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
