--- a/elastic_constants/clean raw frequency data.ipynb
+++ b/elastic_constants/clean raw frequency data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['1776_no_outliers_cooling.dat', '1923_no_outliers_cooling.dat']"
+       "['2288_no_outliers_cooling.dat']"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 6
     }
    ],
    "source": [
@@ -59,20 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 1\n",
+    "i = 0\n",
     "filename = filenames[i]\n",
     "data = data_extract(filename)\n",
     "T = data.import_data(1,3)[0]\n",
     "f = data.import_data(1,3)[1]\n",
     "g = data.import_data(1,3)[2]\n",
     "\n",
-    "g = g[np.argsort(T)]\n",
-    "f = f[np.argsort(T)]\n",
-    "T = np.sort(T)\n",
+    "g = g[np.argsort(T)]#[::-1]\n",
+    "f = f[np.argsort(T)]#[::-1]\n",
+    "T = np.sort(T)#[::-1]\n",
     "\n",
     "# Tnew = []\n",
     "# fnew = []\n",
@@ -140,18 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x27d7a7d0310>"
+       "<matplotlib.collections.PathCollection at 0x24978dfba90>"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 8
     }
    ],
    "source": [
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2257 2257\n"
+      "1575 1575\n"
      ]
     }
    ],
@@ -219,75 +219,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2002\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "T_fixed = []\n",
+    "f_fixed = []\n",
+    "g_fixed = []\n",
+    "i=0\n",
     "for idx, same in enumerate(temps[:-1]):\n",
-    "    if len(same) > 1:\n",
-    "        diff = (temps[idx+1][0] - same[0]) / len(same)\n",
-    "        for ii, t in enumerate(same):\n",
-    "            T_fixed.append(t+ii*diff)\n",
-    "    else:\n",
-    "        T_fixed.append(same[0])\n",
-    "for i in temps[-1]:\n",
-    "    T_fixed.append(i)\n",
-    "print (len(T_fixed))"
+    "    T_fixed.append(np.mean(same))\n",
+    "    f_fixed.append(np.mean(f[i:i+len(same)]))\n",
+    "    g_fixed.append(np.mean(g[i:i+len(same)]))\n",
+    "    i = i+len(same)\n",
+    "# for idx, same in enumerate(temps[:-1]):\n",
+    "#     if len(same) > 1:\n",
+    "#         diff = (temps[idx+1][0] - same[0]) / len(same)\n",
+    "#         for ii, t in enumerate(same):\n",
+    "#             T_fixed.append(t+ii*diff)\n",
+    "#     else:\n",
+    "#         T_fixed.append(same[0])\n",
+    "# for i in temps[-1]:\n",
+    "#     T_fixed.append(i)\n",
+    "# print (len(T_fixed))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "x and y must be the same size",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-275-1e88c11a625f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT_fixed\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\Program Files\\Anaconda\\lib\\site-packages\\matplotlib\\pyplot.py\u001b[0m in \u001b[0;36mscatter\u001b[1;34m(x, y, s, c, marker, cmap, norm, vmin, vmax, alpha, linewidths, verts, edgecolors, plotnonfinite, data, **kwargs)\u001b[0m\n\u001b[0;32m   2877\u001b[0m         \u001b[0mverts\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0medgecolors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0medgecolors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2878\u001b[0m         \u001b[0mplotnonfinite\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mplotnonfinite\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2879\u001b[1;33m         **({\"data\": data} if data is not None else {}), **kwargs)\n\u001b[0m\u001b[0;32m   2880\u001b[0m     \u001b[0msci\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__ret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2881\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0m__ret\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\Anaconda\\lib\\site-packages\\matplotlib\\__init__.py\u001b[0m in \u001b[0;36minner\u001b[1;34m(ax, data, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1436\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1437\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1438\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msanitize_sequence\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1439\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1440\u001b[0m         \u001b[0mbound\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_sig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\Anaconda\\lib\\site-packages\\matplotlib\\cbook\\deprecation.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*inner_args, **inner_kwargs)\u001b[0m\n\u001b[0;32m    409\u001b[0m                          \u001b[1;32melse\u001b[0m \u001b[0mdeprecation_addendum\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    410\u001b[0m                 **kwargs)\n\u001b[1;32m--> 411\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minner_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0minner_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    412\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    413\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\Anaconda\\lib\\site-packages\\matplotlib\\axes\\_axes.py\u001b[0m in \u001b[0;36mscatter\u001b[1;34m(self, x, y, s, c, marker, cmap, norm, vmin, vmax, alpha, linewidths, verts, edgecolors, plotnonfinite, **kwargs)\u001b[0m\n\u001b[0;32m   4439\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4440\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4441\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x and y must be the same size\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4442\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4443\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: x and y must be the same size"
-     ]
-    }
-   ],
-   "source": [
-    "plt.scatter(T, f)\n",
-    "plt.scatter(T_fixed, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1683acd54a8>"
+       "<matplotlib.collections.PathCollection at 0x12d73325dd8>"
       ]
      },
      "metadata": {},
-     "execution_count": 113
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "plt.scatter(T, f)\n",
+    "plt.scatter(T_fixed, f_fixed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x12d6f074668>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
     }
    ],
    "source": [
     "T = np.array(T_fixed)\n",
+    "f = np.array(f_fixed)\n",
+    "g = np.array(g_fixed)\n",
     "\n",
     "# f = f[np.argsort(T)]\n",
     "# g = g[np.argsort(T)]\n",
@@ -407,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,10 +415,10 @@
     "mask = (T > Tmin) & (T < Tmax)\n",
     "plt.scatter(T[mask],f[mask])\n",
     "\n",
-    "T1 = 422\n",
-    "T2 = 422.5\n",
-    "T3 = 423.4\n",
-    "T4 = 424\n",
+    "T1 = 420.5\n",
+    "T2 = 421.8\n",
+    "T3 = 422.8\n",
+    "T4 = 423.5\n",
     "\n",
     "mask1 = ((T>T1) & (T<T2))\n",
     "mask2 = ((T>T3) & (T<T4))\n",
@@ -429,7 +426,7 @@
     "plt.plot( T[mask1], f[mask1], c='red')\n",
     "plt.plot( T[mask2], f[mask2], c='green')\n",
     "\n",
-    "Tc = 423\n",
+    "Tc = 422.56\n",
     "\n",
     "#plt.plot([Tc, Tc], [np.mean(f)-1, np.mean(f)+1], c='orange')\n",
     "plt.plot([Tc, Tc], [min(f[(T>Tmin)&(T<Tmax)]), max(f[(T>Tmin)&(T<Tmax)])], c='orange')\n",
@@ -439,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,22 +471,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x27d7a9c7ca0>]"
+       "<matplotlib.collections.PathCollection at 0x24978f987c0>"
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 14
     }
    ],
    "source": [
-    "plt.plot(T, f)"
+    "plt.figure()\n",
+    "plt.scatter(T, f)"
    ]
   },
   {
@@ -556,18 +554,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21ac9cd6fd0>"
+       "<matplotlib.collections.PathCollection at 0x13549ebe2e8>"
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 116
     }
    ],
    "source": [
@@ -577,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -586,14 +584,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "7.0 109.0\n"
+      "7.0 190.0\n"
      ]
     }
    ],
    "source": [
     "Tcl1 = 1.2\n",
     "Tcl2 = 3\n",
-    "Tcl1 = 422\n",
+    "Tcl1 = 420\n",
     "Tcl2 = 424\n",
     "clean_mask = (T>Tcl1) & (T<Tcl2)\n",
     "\n",
@@ -601,7 +599,7 @@
     "Tclean = T[clean_mask]\n",
     "gclean = g[clean_mask]\n",
     "data_clean = odr.RealData(Tclean, fclean)\n",
-    "initial_guess_clean = [0,0,0,0,0]\n",
+    "initial_guess_clean = [0,0,0]\n",
     "fix_clean = [1,1,1,1,1]\n",
     "model_clean = odr.Model(fct)\n",
     "fit_clean = odr.ODR(data_clean, model_clean, beta0=initial_guess_clean)#, ifixb=fix_clean)\n",
@@ -609,7 +607,7 @@
     "popt_clean = out_clean.beta\n",
     "\n",
     "\n",
-    "epsilon = .05\n",
+    "epsilon = .015\n",
     "index = abs(fclean - fct(popt_clean, Tclean)) < epsilon\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
@@ -623,18 +621,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x27d7a90abe0>"
+       "<matplotlib.collections.PathCollection at 0x2497d915b80>"
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 23
     }
    ],
    "source": [
@@ -654,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
